# bazel-rules-libuv

./: BUILD.bazel
bazel/: deps.bzl  repos.bzl
